[tool.poetry]
name = "Testing system API"
version = "0.1.0"
description = "Testing system`s API [By Xiver organization]."
authors = [
    "GigantPro <pochtagigantpro@gmail.com>"
]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.6"
psycopg2-binary = "^2.9.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}
asyncpg = "^0.27.0"
loguru = "^0.7.0"
alembic = {extras = ["sqlalchemy"], version = "^1.12.1"}
load-dotenv = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "N",   # pep8-naming
]
line-length = 120
exclude = ["alembic"]
