[tool.poetry]
name = "Testing system API"
version = "0.1.0"
description = "Testing system`s API [By Xiver organization]."
authors = [
    "GigantPro <pochtagigantpro@gmail.com>"
]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.6"
psycopg2-binary = "^2.9.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}
asyncpg = "^0.27.0"
loguru = "^0.7.0"
alembic = {extras = ["sqlalchemy"], version = "^1.12.1"}
load-dotenv = "^0.1.0"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "F",   # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "W",   # https://beta.ruff.rs/docs/rules/#warning-w
    "E",   # https://beta.ruff.rs/docs/rules/#error-e
    "I",   # https://beta.ruff.rs/docs/rules/#isort-i
    "N",   # https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "ANN", # https://beta.ruff.rs/docs/rules/#flake8-annotations-ann
    "B",   # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "PT",  # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
]
include = ["*.py"]
force-exclude = true
fixable = ["ALL"]

exclude = [".mypy_cache", ".ruff_cache", ".venv", "__pypackages__", "alembic", "backend/solutions"]
line-length = 120

ignore = [
    "B008",  # do not perform function calls in argument defaults
    "ANN101",  # Missing type annotation for `self` in method
    "RUF009",  # Do not perform function call `get_str_env` in dataclass defaults
]
