[tool.poetry]
name = "Testing system site"
version = "0.1.0"
description = "Testing system`s site [By Xiver organization]."
authors = [
    "GigantPro <pochtagigantpro@gmail.com>"
]
license = "GPL-3.0-only"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"
